some changes done

--- a/slogin.html
+++ b/slogin.html
@@ -247,8 +247,11 @@
 
       <label>Password</label>
       <input type="password" id="password" placeholder="Enter Password" required>
-
-      <button type="submit">Login</button>
+<br/>
+<br/>
+      <a href="admin/UI/Officer/Sindex.html" style="
+    margin-left: 40%;
+">Login</a>
 
     </form>
 
